# EmailSearch

./: .env.example  .gitignore  README.md  pyproject.toml
eval/: specs.example.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: EmailPreview.tsx  SearchableSelect.tsx
frontend/src/pages/: AskPage.tsx  LoadPage.tsx  SearchPage.tsx  SettingsPage.tsx
scripts/: backfill_summaries.py  materialize_queries.py  preview_summaries.py
src/emailsearch/: __init__.py  __main__.py  cli.py  config.py  util.py
src/emailsearch/ask/: __init__.py  parser.py  service.py
src/emailsearch/db/: connection.py  models.py  repositories.py  schema.sql
src/emailsearch/embed/: build_chunks.py  encoder.py
src/emailsearch/eval/: __init__.py  __main__.py  metrics.py  report.py  runner.py  schema.py
src/emailsearch/extract/: extractors.py  inline_images.py  ocr.py  pipeline.py
src/emailsearch/outlook/: __init__.py  com_client.py  raw.py
src/emailsearch/search/: service.py
src/emailsearch/summarize/: __init__.py  client.py
src/emailsearch/sync/: jobs.py  loader.py
src/emailsearch/web/: app.py
src/emailsearch/web/routes/: __init__.py  ask.py  search.py  status.py  sync.py
tests/: conftest.py  test_ask_parser.py  test_ask_service.py  test_build_chunks.py  test_call_chat_stream.py  test_db.py  test_eval_metrics.py  test_extract.py  test_llm_integration.py  test_loader.py  test_search.py  test_summarize.py
