[project]
name = "emailsearch"
version = "0.1.0"
description = "Local email search tool with keyword + semantic search over Outlook mail and attachments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.13",
    # Outlook (Windows-only — we drive the local Classic Outlook via COM)
    "pywin32>=308 ; sys_platform == 'win32'",
    # Storage
    "sqlite-vec>=0.1.7",
    # Embedding (LlamaIndex used as transform-only)
    "llama-index-core>=0.12",
    "llama-index-embeddings-huggingface>=0.4",
    "sentence-transformers>=3.3",
    # Extraction
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "html2text>=2024.2.26",
    "lxml>=5.3",
    # OCR (pure-pip, no Tesseract required)
    "rapidocr-onnxruntime>=1.4",
    "pillow>=11.0",
    # Misc
    "python-dateutil>=2.9",
]

[project.scripts]
emailsearch = "emailsearch.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emailsearch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # long lines handled by formatter

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
